# knowledge-sep

./: .gitignore  README.md  data.py  eval.py  loss.py  model.py  pyproject.toml  train.py  utils.py
notebooks/: quen3.ipynb  res_analysis.ipynb  rough_work.ipynb
