[project]
name = "knowledge-sep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "numpy<=2.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
