[project]
name = "knowledge-sep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "numpy<=2.2",
    "pandas>=3.0.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
